// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoaderContainer /> Should render LoaderContainer 1`] = `
<DocumentFragment>
  <div
    class="af-loader"
  />
</DocumentFragment>
`;

exports[`<LoaderContainer /> Should render LoaderContainer active 1`] = `
<DocumentFragment>
  <div
    class="af-loader af-loader--active"
  >
    <p
      class="af-loader__spinner"
    >
      Chargement en cours
    </p>
  </div>
</DocumentFragment>
`;

exports[`<LoaderContainer /> Should render LoaderContainer with custom text 1`] = `
<DocumentFragment>
  <div
    class="af-loader af-loader--active"
  >
    <p
      class="af-loader__spinner"
    >
      texte de chargement
    </p>
  </div>
</DocumentFragment>
`;
